<resources>
    <string name="app_name">Doodlz App</string>
    <string name="start_now">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="increase_brush_size">Increase Brush Size</string>
    <string name="decrease_brush_size">Decrease Brush Size</string>
</resources>