<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context=".MainActivity">
    <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="50dp">
        <ImageButton
                android:id="@+id/new_btn"
                android:contentDescription="@string/start_now"
                android:src="@drawable/new_pic"
                android:layout_width="wrap_content" android:layout_height="fill_parent"/>
        <ImageButton
                android:id="@+id/increase_brushSize"
                android:contentDescription="@string/increase_brush_size"
                android:src="@drawable/increase"
                android:layout_width="55dp" android:layout_height="fill_parent" android:onClick="onClick"/>
        <ImageButton
                android:id="@+id/decrease_brushSize"
                android:contentDescription="@string/decrease_brush_size"
                android:src="@drawable/decrease"
                android:layout_width="55dp" android:layout_height="fill_parent" android:onClick="onClick"/>

        <ImageButton
                android:id="@+id/draw_btn"
                android:contentDescription="@string/brush"
                android:src="@drawable/brush"
                android:layout_width="wrap_content" android:layout_height="fill_parent"/>
        <ImageButton
            android:id="@+id/erase_btn"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser"
            android:layout_width="wrap_content" android:layout_height="fill_parent"/>
        <ImageButton
                android:id="@+id/save_btn"
                android:contentDescription="@string/save"
                android:src="@drawable/save"
                android:layout_width="wrap_content" android:layout_height="fill_parent"/>

    </LinearLayout>
    <com.example.paintingapp.DrawingView
            android:id="@+id/drawing"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
    />
    <LinearLayout
            android:id="@+id/paint_colors"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageButton
            android:layout_margin="2dp"
            android:background="#FF660000"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="#FF660000"
            android:layout_width="30dp" android:layout_height="30dp"/>
        <ImageButton
                android:layout_margin="2dp"
                android:background="#FFFF0000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFF0000"
                android:layout_width="30dp" android:layout_height="30dp"/>
        <ImageButton
                android:layout_margin="2dp"
                android:background="#FFFF6600"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFF6600"
                android:layout_width="30dp" android:layout_height="30dp"/>
        <ImageButton
                android:layout_margin="2dp"
                android:background="#FFFFCC00"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFFCC00"
                android:layout_width="30dp" android:layout_height="30dp"/>
        <ImageButton
                android:layout_margin="2dp"
                android:background="#FF009900"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF009900"
                android:layout_width="30dp" android:layout_height="30dp"/>
        <ImageButton
                android:layout_margin="2dp"
                android:background="#FF009999"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF009999"
                android:layout_width="30dp" android:layout_height="30dp"/>
        <ImageButton
                android:layout_margin="2dp"
                android:background="#FF0000FF"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF0000ff"
                android:layout_width="30dp" android:layout_height="30dp"/>
        <ImageButton
                android:layout_margin="2dp"
                android:background="#FF990099"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF990099"
                android:layout_width="30dp" android:layout_height="30dp"/>
        <ImageButton
                android:layout_margin="2dp"
                android:background="#FFFF6666"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFF6666"
                android:layout_width="30dp" android:layout_height="30dp"/>
        <ImageButton
                android:layout_margin="2dp"
                android:background="#FFFFFFFF"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFFFFFF"
                android:layout_width="30dp" android:layout_height="30dp"/>
        <ImageButton
                android:layout_margin="2dp"
                android:background="#FF787878"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF787878"
                android:layout_width="30dp" android:layout_height="30dp"/>

    </LinearLayout>
</LinearLayout>